@startuml

package seedu.command {
  class AddCommand {
    +handleAddMultipleFields()
    +handleAddRecord()
    +handleUpdateFields()
    +execute(args: String[])
  }
}

package seedu.model {
  class Inventory {
    +addField(field: String, type: String)
    +addRecord(record: Map<String, String>)
    +getFields(): List<String>
  }
}

package seedu.storage {
  class Csv {
    +updateCsvHeaders(inventory: Inventory)
    +appendRecord(record: Map<String, String>, inventory: Inventory)
  }
}

package seedu.ui {
  class Ui {
    +printMessage(message: String)
    +showFieldsAndRecords(inventory: Inventory)
    +showSuccessFieldsAdded()
    +showSuccessRecordAdded()
  }
}

AddCommand --> Inventory : "modifies"
AddCommand --> Csv : "updates"
AddCommand --> Ui : "displays"

@enduml
